  classes. Class atkWizard supports all atkActions but it is mainly tested
  for add, edit and admin actions. [Maurice]
+ Added class atkController which controls which page to load and the sending
  of post and get vars. Several methods from atkNode have been moved to this
  class. Most importantly, methods for dispatching, page rendering and url
  creating are moved. [Maurice]
+ Added getPostVar function which simply returns the _REQUEST params array
  or a specific param when a key is given as parameter. [Maurice]
+ Added atkWizardController class which is responsable for typical
  control actions for nodes being used with atkWizard. [Maurice]
+ Added member var m_renderBoxVars to atkActionHandler which is an array
+ Added 'get' functions to atkPage for javascript and stylesheets. [Maurice]
+ Implemented reuse of handlers in atknode::getHandler method, which is also
  necessary when you want to save member vars before you use them at a later
  time in your pageload. [Maurice]
+ Added style class for atkShuttleRelation. [Angelo]
+ Added atkCaptchaAttribute for use with e.g guestbooks to prevent
  spam. [Nico]
+ Added m_displayShowAll var to atkNavigator, so you can configure if you
  want to show the 'show all' link in the navigation [Wim, Nico]
+ Devided render part in the atkrecordlist class into a specific render
  part and a part which collects all needed data for rendering.
  This way it's easy to display a recordlist in a different layout. [Wim]
+ Added pre-action support in atkNode and atkActionListener classes. [Patrick]
+ Added support to the LDAP authentication class for searching in
  multiple locations (DN's) instead of one base DN as it was previously
  [Wim].
+ Added function checkKeyDimension() in the atkManyToManyRelation class
  to fix a problem with local / remote keys being a multi-dimensional
  array which resulted in invalid queries (mostly occurred in
  combination with atkmanyboolrelation / atkshuttlerelation). [Wim]