@@ -72,8 +72,7 @@
     $flags = array_key_exists("atkpartial", $ATK_VARS) ? HTML_PARTIAL : HTML_STRICT;
 
     //Handle http request   
-    atkimport("atk.atkcontroller"); 
-    $controller = &atkController::getInstance();
+    $controller = &atkinstance("atk.atkcontroller");
     $controller->handleRequest($ATK_VARS, $flags);
   }
   $output->outputFlush();
